# react-native-gifsicle

./: .gitignore  CONTRIBUTING.md  README.md  app.plugin.js  keysAndroid.js  keysIOS.js  package.json  react-native-gifsicle.podspec  tsconfig.json
android/: CMakeLists.txt  RNKeys.gradle  build.gradle  cpp-adapter.cpp  gradle.properties
android/androidcpp/: gifsicle_wrapper.cpp  mediator.cpp  testutils.cpp  testutils.h
android/src/main/: AndroidManifestDeprecated.xml
android/src/main/java/com/gifsicle/: GifsicleCppBridge.java  GifsicleModule.java  GifsiclePackage.java
android/src/main/java/com/reactnativekeysjsi/: KeysModule.java
android/src/newarch/: GifsicleSpec.java
android/src/oldarch/: GifsicleSpec.java
cpp/: ThreadPool.cpp  ThreadPool.h  bindings.cpp  bindings.h  filesystem_wrapper.h  gifsicle_wrapper.cpp  gifsicle_wrapper.h  gifsicleutil.cpp  gifsicleutil.h
cpp/gifsicle/: fmalloc.c  gifread.c  gifsicle.c  gifwrite.c  opttemplate.c  progress.cpp  support.c  utility.cpp  xform.c
cpp/gifsicle/serialization/: binary.cpp  binary.h  gif_generated.h
cpp/include/: config.h  gifsicle.h  progress.h  utility.h
cpp/include/lcdfgif/: gif.h
docs/: react-native-config-migration-guide.md
example/: README.md  app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/gifsicleexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/gifsicleexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/keysexample/: MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/gifsicleexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/GifsicleExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/GifsicleExample.xcodeproj/: project.pbxproj
example/ios/GifsicleExample.xcodeproj/xcshareddata/xcschemes/: GifsicleExample.xcscheme
example/ios/GifsicleExample.xcworkspace/: contents.xcworkspacedata
example/ios/GifsicleExampleTests/: GifsicleExampleTests.m
example/src/: App.tsx
exampleExpo/: package.json
exampleExpo/android/app/: build.gradle
exampleExpo/src/: App.tsx
ios/: GeneratedDotEnv.m  GifsicleMain.h  GifsicleMain.mm  Keys.h  Keys.mm  gifsicle_wrapper.h  gifsicle_wrapper.mm
plugin/src/: index.ts
plugin/src/android/: buildscriptDependency.ts
plugin/src/ios/: preactionScript.ts
src/: index.ts  type.ts
src/spec/: NativeGifsicle.ts
src/util/: common.js
